--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.17)
-project(LearningCPP)
+cmake_policy(SET CMP0048 NEW)
+project(LearningCPP VERSION "0.1.0")
 
-set(CMAKE_CXX_STANDARD 20)
-
-add_executable(LearningCPP main.cpp)
+add_subdirectory(src/opencv) # 指定 编译子目录
