--- a/src/opencv/CMakeLists.txt
+++ b/src/opencv/CMakeLists.txt
@@ -1,2 +1,8 @@
-SET(opencv_SRC version.cpp)
-ADD_EXECUTABLE(opencv ${opencv_SRC})
+
+find_package(OpenCV REQUIRED)
+include_directories(${OpenCV_INCLUDE_DIRS})
+
+SET(opencv version.cpp)
+ADD_EXECUTABLE(opencv ${opencv})
+
+target_link_libraries(opencv ${OpenCV_LIBS})
