--- a/src/opencv/CMakeLists.txt
+++ b/src/opencv/CMakeLists.txt
@@ -2,6 +2,5 @@
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-SET(opencv version.cpp)
-ADD_EXECUTABLE(opencv ${opencv})
-target_link_libraries(opencv ${OpenCV_LIBS})
+ADD_EXECUTABLE(version version.cpp)
+target_link_libraries(version ${OpenCV_LIBS})
