--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 3.17)
 cmake_policy(SET CMP0048 NEW)
 project(LearningCPP VERSION "0.1.0")
 
+add_subdirectory(src/boost)
 add_subdirectory(src/opencv) # 指定 编译子目录
