--- a/src/opencv/CMakeLists.txt
+++ b/src/opencv/CMakeLists.txt
@@ -2,5 +2,5 @@
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-ADD_EXECUTABLE(version version.cpp)
-target_link_libraries(version ${OpenCV_LIBS})
+ADD_EXECUTABLE(version_opencv version_opencv.cpp)
+target_link_libraries(version_opencv ${OpenCV_LIBS})
